[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/QueryStart/query_start.gd" type="Script" id=1]
[ext_resource path="res://src/header_text.gd" type="Script" id=2]

[node name="QueryStart" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.5
margin_top = -79.5
margin_right = 215.5
margin_bottom = 79.5
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 413.0
margin_bottom = 108.0

[node name="HeaderInfo" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 108.0

[node name="EngineerContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/HeaderInfo"]
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )

[node name="Engineer" type="LineEdit" parent="VBoxContainer/HBoxContainer/HeaderInfo/EngineerContainer"]
margin_right = 200.0
margin_bottom = 24.0
placeholder_text = "Engineer Name"
script = ExtResource( 2 )
key_name = "engineer"

[node name="DateContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/HeaderInfo"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 52.0

[node name="Date" type="LineEdit" parent="VBoxContainer/HBoxContainer/HeaderInfo/DateContainer"]
margin_right = 200.0
margin_bottom = 24.0
placeholder_text = "Date"
script = ExtResource( 2 )
key_name = "date"

[node name="JobContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/HeaderInfo"]
margin_top = 56.0
margin_right = 200.0
margin_bottom = 80.0

[node name="Job" type="LineEdit" parent="VBoxContainer/HBoxContainer/HeaderInfo/JobContainer"]
margin_right = 200.0
margin_bottom = 24.0
placeholder_text = "Job Name"
script = ExtResource( 2 )
key_name = "job"

[node name="LocationContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/HeaderInfo"]
margin_top = 84.0
margin_right = 200.0
margin_bottom = 108.0

[node name="Location" type="LineEdit" parent="VBoxContainer/HBoxContainer/HeaderInfo/LocationContainer"]
margin_right = 200.0
margin_bottom = 24.0
placeholder_text = "Location"
script = ExtResource( 2 )
key_name = "location"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 344.0
margin_bottom = 108.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 140.0
margin_bottom = 40.0
stretch_mode = 1

[node name="JobType" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/AspectRatioContainer"]
margin_right = 140.0
margin_bottom = 40.0
rect_min_size = Vector2( 140, 40 )

[node name="Additions" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 348.0
margin_right = 413.0
margin_bottom = 108.0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer/Additions"]
margin_right = 65.0
margin_bottom = 24.0
text = "Blend"

[node name="CheckBox2" type="CheckBox" parent="VBoxContainer/HBoxContainer/Additions"]
margin_top = 28.0
margin_right = 65.0
margin_bottom = 52.0

[node name="StartReview" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 413.0
margin_bottom = 132.0
text = "Start Review"
